--- a/_data/dra200/dra200.md
+++ b/_data/dra200/dra200.md
@@ -1,5 +1,5 @@
 ---
-name: Ahmed shaban 
+name: Ahmed shabban 
 institution: Zagazig University 🚩 
 quote: "If you do not achieve your dreams, do not wait for others to achieve your dreams"
 github_user: dra200
